vault/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.org/client-max-body-size: 20m
spec:
  rules:
  - host: aks-ingress-platform.westeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          serviceName: vault-ui
          servicePort: 8200
        path: /
